Update start script for TWS/Gateway 1034 on Linux (introduction of JRE 17)