@@ -435,22 +435,14 @@ elif [[ "$os" = "$OS_OSX" ]]; then
 	fi
 fi
 
-# alternatively use installed java, if it's from oracle (openJDK causes problems with TWS)
+# alternatively use installed java
 if [[ ! -n "$java_path" ]]; then
 	if type -p java > /dev/null; then
 		echo Found java executable in PATH
-		system_java=java
+		java_path=$(which java)
 	elif [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]];  then
 		echo Found java executable in JAVA_HOME
-		system_java="$JAVA_HOME/bin/java"
-	fi
-
-	if [[ "$system_java" ]]; then
-		if [[ $($system_java -XshowSettings:properties -version 2>&1) = *"Java(TM) SE Runtime Environment"* ]]; then
-			java_path=$(dirname $(which $system_java))
-		else
-			>&2 echo "System java $system_java is not from Oracle, won't use it"
-		fi
+		java_path="$JAVA_HOME/bin/java"
 	fi
 fi
 
@@ -459,6 +451,13 @@ if [[ -z "$java_path" ]]; then
 elif [[ ! -e "$java_path/java" ]]; then
 	error_exit $E_NO_JAVA "No java executable found in supplied path $java_path"
 fi
+
+if [[ $($java_path.java -XshowSettings:properties 2>&1) = *"java.runtime.version = 1.8"* ]]; then
+	useJava8="yes"
+else
+	useJava8="no"
+fi
+
 
 echo Location of java executable=$java_path
 echo
@@ -491,23 +490,27 @@ elif [[ "$os" = "$OS_OSX" ]]; then
 fi
 echo
 
+if [[ $useJava8 != "yes" ]]; then
+moduleAccess="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-exports=java.base/sun.util=ALL-UNNAMED --add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/java.awt.dnd=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.event=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens=java.desktop/javax.swing.table=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.desktop/sun.awt.X11=ALL-UNNAMED --add-exports=java.desktop/sun.swing=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports=javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED --add-exports=javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED --add-exports=javafx.media/com.sun.media.jfxmedia.locator=ALL-UNNAMED --add-exports=javafx.media/com.sun.media.jfxmediaimpl=ALL-UNNAMED --add-exports=javafx.web/com.sun.javafx.webkit=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED"
+fi
+
 while :
 do
 	echo "Starting $program with this command:"
-	echo -e "\"$java_path/java\" -cp \"$ibc_classpath\" $java_vm_options$autorestart_option $entry_point \"$ibc_ini\" $hidden_credentials ${mode}"
+	echo -e "\"$java_path/java\" $moduleAccess -cp \"$ibc_classpath\" $java_vm_options$autorestart_option $entry_point \"$ibc_ini\" $hidden_credentials ${mode}"
 	echo
 
 	# forward signals (see https://veithen.github.io/2014/11/16/sigterm-propagation.html)
 	trap 'kill -TERM $PID' TERM INT
 
 	if [[ -n $got_fix_credentials && -n $got_api_credentials ]]; then
-		"$java_path/java" -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" "$fix_user_id" "$fix_password" "$ib_user_id" "$ib_password" ${mode} &
+		"$java_path/java" $moduleAccess -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" "$fix_user_id" "$fix_password" "$ib_user_id" "$ib_password" ${mode} &
 	elif  [[ -n $got_fix_credentials ]]; then
-		"$java_path/java" -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" "$fix_user_id" "$fix_password" ${mode} &
+		"$java_path/java" $moduleAccess -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" "$fix_user_id" "$fix_password" ${mode} &
 	elif [[ -n $got_api_credentials ]]; then
-		"$java_path/java" -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" "$ib_user_id" "$ib_password" ${mode} &
+		"$java_path/java" $moduleAccess -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" "$ib_user_id" "$ib_password" ${mode} &
 	else
-		"$java_path/java" -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" ${mode} &
+		"$java_path/java" $moduleAccess -cp "$ibc_classpath" $java_vm_options$autorestart_option $entry_point "$ibc_ini" ${mode} &
 	fi
 
 	PID=$!
